[gd_scene load_steps=2 format=2]

[ext_resource path="res://SpawnArea.gd" type="Script" id=1]

[node name="SpawnArea" type="Area2D" groups=["AffectedByClock"]]
collision_layer = 32
collision_mask = 2
script = ExtResource( 1 )

[node name="Enemies" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_SpawnArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_SpawnArea_body_exited"]
[connection signal="child_entered_tree" from="." to="." method="_on_SpawnArea_child_entered_tree"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
